--- a/server/config/config.development.yml
+++ b/server/config/config.development.yml
@@ -9,3 +9,11 @@ db:
     password: '123456'
     database: yrk_test
 
+  redis:
+    host: 127.0.0.1
+    port: 6379
+    family: 4
+    password: ''
+    db: 0,
+    keyPrefix: 'hanser::'
+
