--- a/server/config/config.yml
+++ b/server/config/config.yml
@@ -9,5 +9,13 @@ db:
     password: '123456'
     database: yrk_test
 
+  redis:
+    host: 127.0.0.1
+    port: 6379
+    family: 4
+    password: ''
+    db: 0,
+    keyPrefix: 'hanser::'
+
 jwt:
-  se: 123
+  secret: 'hanseryyds'
