--- a/server/package.json
+++ b/server/package.json
@@ -23,10 +23,13 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.2",
     "@types/lodash": "^4.17.4",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "js-yaml": "^4.1.0",
     "loader": "^2.1.1",
     "lodash": "^4.17.21",
